--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,10 @@
 .container {
   display: flex;
   flex-direction: column;
-  background-color: #000;
+  background-color: #fff;
+}
+.container.modo-oscuro{
+  background-color: #000000;
 }
 
 .header {
